src/objects/MealDetail__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>献立明細</relationshipLabel>
        <relationshipName>refMealMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MealDateKey__c</fullName>
        <externalId>true</externalId>
        <label>献立日付</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <label>店舗コード</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>献立明細</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>コード</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>